<resources>
    <string name="app_name">WeightTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_tos">Tos/Privacy</string>
    <string name="menu_help">Help</string>
    <string name="menu_log_in">Log in</string>
    <string name="menu_log_out">Log out</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password:</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="email">Email:</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="goal_weight_reached">Goal Weight Reached</string>
    <string name="sms_notification_settings">SMS Notification Settings</string>
    <string name="cancel">Cancel</string>
    <string name="goal_weight">Goal Weight:</string>
</resources>